issues remained with sizing on mobile for checkout page and caused overflow margin and horizontal scroll. Added css to prevent over flow on base css. Updated margins for checkout page and moved the order summary below the table for mobile devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,6 +8,12 @@ h1, h2, h3, h4, h5{
 p {
     font-family: "serrat", sans-serif;
 }
+html,body
+{
+    width: 100%;
+    overflow-x: hidden; 
+}
+
 .header-title{
     font-family: "Roboto Condensed", sans-serif;
 }
